[package]
name = "principal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bollard = "0.15.0"
clap = { version = "4.5.1", features = ["derive", "env"] }
duration-string = "0.3.0"
pcap = "1.2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.18"
