[package]
name = "principal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
bollard = "0.15.0"
clap = { version = "4.5.1", features = ["derive", "env"] }
duration-string = "0.3.0"
pcap = "1.2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
netstat2 = "0.9.1"

[dev-dependencies]
testcontainers = "0.12.0"
nanoid = "0.4.0"
reqwest = "0.11"
futures-util = "0.3.30"
